Prepare branch for Java 8 and Spring Boot 2.1.7.RELEASE