@@ -7,9 +7,13 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 
 import java.nio.file.Files;
 import java.nio.file.Paths;
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.Set;
 
-import org.junit.jupiter.api.Test;
+import org.junit.Test;
+import org.junit.runner.RunWith;
+import org.springframework.test.context.junit4.SpringRunner;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
@@ -19,6 +23,7 @@ import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
 @WebMvcTest(PrimesController.class)
+@RunWith(SpringRunner.class)
 public class PrimesControllerTest {
 
     @Autowired
@@ -34,8 +39,8 @@ public class PrimesControllerTest {
         Resource r = resolver.getResource("classpath:sample-result.json");
         byte[] encoded = Files.readAllBytes(Paths.get(r.getURI()));
         String response = new String(encoded, "UTF-8");
-        Set<Long> result = Set.of(2L, 3L, 5L, 7L, 11L, 13L, 17L, 19L, 23L, 29L, 31L, 37L, 41L, 43L, 47L, 53L, 59L,
-                61L, 67L, 71L, 73L, 79L, 83L, 89L, 97L);
+        Set<Long> result = new HashSet<>(Arrays.asList(2L, 3L, 5L, 7L, 11L, 13L, 17L, 19L, 23L, 29L, 31L, 37L, 41L, 43L, 47L, 53L, 59L,
+                61L, 67L, 71L, 73L, 79L, 83L, 89L, 97L));
         when(service.getPrimes(1L, 100L)).thenReturn(result);
         mockMvc.perform(
                 get("/primes/1/100")
